--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button{
     cursor:pointer;
 }
 button:hover{
-    background-color: #F0B36A;
+    background-color: lightblue;
 }
 ul{
     list-style-type:none;
@@ -54,7 +54,7 @@ li{
      border-radius: 5px;
 }
 li span{
-    background-color:#d9534f;
+    background-color:pink;
     color:#fff;
     border:none;
     border-radius: 5px;
@@ -62,5 +62,5 @@ li span{
     cursor:pointer;
 }
 li button:hover{
-    background-color: #c9302c;
+    background-color:red;
 }
